[gd_scene load_steps=26 format=3 uid="uid://dyakxflhhwki"]

[ext_resource type="Script" uid="uid://dvlmtyo65onr5" path="res://game/entities/tools/tool.gd" id="1_tool"]
[ext_resource type="Shader" uid="uid://dqo0njowlbkvd" path="res://game/entities/particles/shaders/wind_swish.gdshader" id="3_wind"]
[ext_resource type="Texture2D" uid="uid://pvyttththttt" path="res://assets/particles/slash/slash.png" id="4_ar2nd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_duldc"]
shader = ExtResource("3_wind")
shader_parameter/wind_color = Color(1, 1, 1, 1)
shader_parameter/erosion = 0.6
shader_parameter/alpha_boost = 0.4

[sub_resource type="AtlasTexture" id="AtlasTexture_n23py"]
atlas = ExtResource("4_ar2nd")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7u8vl"]
atlas = ExtResource("4_ar2nd")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpnf4"]
atlas = ExtResource("4_ar2nd")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kmbm"]
atlas = ExtResource("4_ar2nd")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_52v05"]
atlas = ExtResource("4_ar2nd")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dy13"]
atlas = ExtResource("4_ar2nd")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmofx"]
atlas = ExtResource("4_ar2nd")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4ylu"]
atlas = ExtResource("4_ar2nd")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tumho"]
atlas = ExtResource("4_ar2nd")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf1mp"]
atlas = ExtResource("4_ar2nd")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_duldc"]
atlas = ExtResource("4_ar2nd")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar2nd"]
atlas = ExtResource("4_ar2nd")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_chvr2"]
atlas = ExtResource("4_ar2nd")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pr70f"]
atlas = ExtResource("4_ar2nd")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cit3c"]
atlas = ExtResource("4_ar2nd")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fw3ig"]
atlas = ExtResource("4_ar2nd")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gh2ev"]
atlas = ExtResource("4_ar2nd")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6gt0"]
atlas = ExtResource("4_ar2nd")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wp0bm"]
atlas = ExtResource("4_ar2nd")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sepfd"]
atlas = ExtResource("4_ar2nd")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_n23py"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n23py")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7u8vl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpnf4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kmbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52v05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dy13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmofx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4ylu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tumho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf1mp")
}],
"loop": false,
"name": &"slash",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n23py")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kmbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52v05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dy13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dy13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmofx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmofx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4ylu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tumho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf1mp")
}],
"loop": false,
"name": &"strike",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_duldc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar2nd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chvr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pr70f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cit3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fw3ig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gh2ev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6gt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wp0bm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sepfd")
}],
"loop": false,
"name": &"swipe",
"speed": 10.0
}]

[node name="Tool" type="Node2D"]
script = ExtResource("1_tool")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -5.0

[node name="SwishSprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_duldc")
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_n23py")
animation = &"slash"
frame = 9
frame_progress = 1.0

[node name="ToolSprite" type="AnimatedSprite2D" parent="."]
visible = false

[node name="Markers" type="Node2D" parent="."]

[node name="MarkerFront" type="Marker2D" parent="Markers"]
position = Vector2(6, 4)

[node name="MarkerBack" type="Marker2D" parent="Markers"]
position = Vector2(-3, -13)

[node name="MarkerLeft" type="Marker2D" parent="Markers"]
position = Vector2(-12, 0)

[node name="MarkerRight" type="Marker2D" parent="Markers"]
position = Vector2(13, 0)

[node name="ToolMarkers" type="Node2D" parent="."]

[node name="Front" type="Marker2D" parent="ToolMarkers"]
position = Vector2(-1, 4)

[node name="Left" type="Marker2D" parent="ToolMarkers"]
position = Vector2(2, 1)

[node name="Right" type="Marker2D" parent="ToolMarkers"]
position = Vector2(-2, 1)

[node name="Back" type="Marker2D" parent="ToolMarkers"]
position = Vector2(0, 8)
